# trigger

./: .gitignore  CMakeLists.txt  README.md
archived/: ltutests.tgz  readme
cmake/modules/: UseDocbook.cmake
doc/: CMakeLists.txt
doc/config/: doc-html.xsl.in
doc/trigger-doc/: CMakeLists.txt  trigger-oncall-doc.xml  trigger.css
scripts/: RunParted.sh
v/: Pb_partitions  bmd2p2.sh
v/DOC/: CTPhistory.txt  CTPhistory2008.txt  CTPhistory2011.txt  CTPhistory2012.txt  CTPhistory2015.txt  CTPhistory2016.txt  CTPhistory2017.txt  CTPhistory2018.txt  Installation  act_problem  clockhistory.txt  counters.txt  done6jul09  eofyear.txt  filling_schema  gcc-pp  history.txt  howtos  lab2pit4Feb2010.txt  lnxpool31  ltu_distrib  ltuhistory_beforemarch2009.txt  ltusw_client.txt  newdimservices  prog.txt  readme  readmeCTP_obsolete  serial.txt  ssmsync  updateFromP2
v/DOC/devdbg/: Archive  BSTinTimeCFG  CTPregistersDump  EODcrashOfCtpproxy  GlobalCalibration  L0_VETO_MASK  LTUcounters_archive  LoadPartition  SmaqTodo  (+53 more)
v/SPECS/: ltuclient.spec  ltusw.spec  readme
v/vme/: Pb_partitions
v/vmeb/: caenvme.setup  cmdbase.c  cmdlin2.py  cmdlin2.py.bak  cmdlint.py.delme  com_defs.make  comp.py  comp.py.bak  counters.py  counters.py.bak  crate.py  crate.py.bak  cratedim.py  cratedim.sh  ctpcfg.znc  daq_defs.make  downscaling.py  exinh.py  lib_stuff.make  lturestart  makefile_vmeb  myw.py  mywnewbits.py  pylog.py  readme  regs.py  sc.make  tags  testmyw.py  tr.py  trigdb.py  txtproc.py  vmeai.make  vmeai.make.AIX  vmeai.make.CAENVME  vmeai.make.MSVISA  vmeai.make.SIMVME  vmeai.make.TSI148  vmeai.make.VMECCT  vmeai.make.VMERCC  (+4 more)
v/vmeb/vmeblib/: CMakeLists.txt  Makefile  actdb.c  bakery.c  bakery.h  daqlogbook.c  daqlogbook.h  detectfile.c  dimwrap.c  doItemName.c  dodif32.c  environment.c  infolog.c  infolog.h  lexan.c  lexan.h  loadFPGA.c  make707  make_new  makefile2  makefile_old  prtError.c  ranlux.c  redisint.c  shmaccess.c  shmaccess.h  signature.c  timeroutines.c  udplib.c  udplib.h  vmeblib.h  vmeblib.h.gch  vmesim.c  vmesim.h  vmewrap.c  vmewrap.h  vmewrapdefs.h
(+1856 files in other folders)
